--- a/index.css
+++ b/index.css
@@ -1,11 +1,14 @@
 :root{
-    --verde: rgba(0, 168, 28, 0.493);
+    --verde: rgba(0, 168, 28, 0.753);
     --blanco: rgb(245,245,245);
     --negro: rgb(22, 22, 22);
+    --azul: rgb(0, 0, 255);
 }
 i{
     color: var(--negro);
-    margin: 10px;
+    margin: 5px ;
+    padding: 0 15px;
+    font-size: 23px;
 }
     
 *{
@@ -30,13 +33,14 @@ header{
 }
 header h1{
     text-decoration: none;
-    color: rgb(75, 75, 255);
-    font-size: 140%;
-    margin: 5px 0px;
+    color: var(--verde);
+    font-size: 40px;
+    margin: 7px 10px;
+    font-family: 'Teko', sans-serif;
 }
 .hero{
     color: #fff;
-    background-image: linear-gradient(0deg,rgba(73, 73, 73, 0.596),rgba(0, 0, 0, 0.658)) ,url(./img/Gabinete99.jpg);
+    background-image: linear-gradient(0deg,var(--verde),rgba(0, 0, 0, 0.658)) ,url(./img/Gabinete99.jpg);
     height: 250px;
     background-position: center;
     background-size: cover;
@@ -44,6 +48,9 @@ header h1{
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+.hero h2{
+    font-size: 29px;
 }
 .presentacion{
     display: flex;
@@ -53,9 +60,14 @@ header h1{
     margin: 10px 30px;
 }
 .presentacion em{
-    color: rgb(75, 75, 255);
+    color: var(--verde);
+    font-size: 30px;
+    font-family: 'Teko', sans-serif;
 }
 .manuales-presentacion{
+    text-align: center;
+}
+.manuales-presentacion .manuales{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -74,16 +86,101 @@ header h1{
     max-width: 400px;
     width: 90%;
     margin: 10px 0px;
+    cursor: pointer;
+}
+.presen:nth-child(1){
+    background-image:linear-gradient(0deg,rgb(0, 0, 0), rgba(0, 0, 0, 0.473)) ,url(./img/Torre_abierta.jpg);
 }
 .presen:nth-child(2){
-    background-image:linear-gradient(0deg,rgba(0, 0, 0, 0.473), rgba(0,0,0,0.473)) ,url(./img/Torre_abierta.jpg);
+    background-image:linear-gradient(0deg,rgb(0, 0, 0), rgba(0,0,0,0.473)) ,url(./img/Abierto.jpeg);
 }
 .presen:nth-child(3){
-    background-image:linear-gradient(0deg,rgba(0, 0, 0, 0.473), rgba(0,0,0,0.473)) ,url(./img/Abierto.jpeg);
+    background-image:linear-gradient(0deg,rgb(0, 0, 0), rgba(0,0,0,0.473)) ,url(./img/modificaciones.jpeg);
 }
 .presen:nth-child(4){
-    background-image:linear-gradient(0deg,rgba(0, 0, 0, 0.473), rgba(0,0,0,0.473)) ,url(./img/modificaciones.jpeg);
+    background-image:linear-gradient(0deg,rgb(0, 0, 0), rgba(0,0,0,0.473)) ,url(./img/Ubuntu-18.04-Desktop.png);
 }
-.presen:nth-child(5){
-    background-image:linear-gradient(0deg,rgba(0, 0, 0, 0.473), rgba(0,0,0,0.473)) ,url(./img/Ubuntu-18.04-Desktop.png);
+footer{
+    font-size: 0.5em;
+    text-align: center;
+}
+footer p{
+    text-align: center;
+    margin: 5px
+}
+nav{
+    z-index: 9999;
+}
+.nav-menu{
+    position: fixed;
+    top:0;
+    left: -100%;
+    width: 50%;
+    height: 100vh;
+    background: rgb(235,235,235);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 9999;
+}
+.nav-menu a{
+    text-decoration: none;
+    color: var(--negro);
+}
+.nav-menu a:hover{
+    color: var(--verde);
+}
+.nav-menu li{
+    list-style: none;
+    margin: 7px;
+}
+
+@media (min-width: 900px) {
+    .hero{
+        background-attachment: fixed;
+        height: 70vh;
+    }
+    .manuales-presentacion .manuales{
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .manuales-presentacion .manuales .presen{
+        margin: 10px;
+    }
+    .presentacion{
+        height: 40vh;
+    }
+    .title{
+        font-size: 2em;
+    }
+    .title em{
+        font-size: 1.2em;
+    }
+    .nav-menu{
+        position: fixed;
+        top:0;
+        left: -100%;
+        width: 25%;
+        height: 100vh;
+        background: rgb(235,235,235);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        z-index: 9999;
+    }
+    .nav-menu a{
+        text-decoration: none;
+        color: var(--negro);
+    }
+    .nav-menu a:hover{
+        color: var(--verde);
+    }
+    .nav-menu li{
+        list-style: none;
+        margin: 7px;
+    }
+    .hero #hero-titule{
+        font-size: 3.5em;
+    }
+    
 }
